修改bug, 优化代码