@@ -7,6 +7,7 @@ import carpet.utils.TranslationKeys;
 import com.carpet.rof.annotation.QuickTranslations;
 import com.carpet.rof.annotation.ROFCommand;
 import com.carpet.rof.annotation.ROFRule;
+import com.carpet.rof.utils.ROFCommandHelper;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.BoolArgumentType;
 import com.mojang.brigadier.arguments.StringArgumentType;
@@ -40,9 +41,9 @@ public class SearchCommand
     @QuickTranslations(name = "Carpet规则搜索命令",
             description = "添加了carpet的子命令search，可以通过关键字搜索carpet规则")
     public static String commandRulesSearcher = "true";
-    static String identifier = "carpet";
+    private static final String IDENTIFIER = "carpet";
 
-    private static Text makeSetRuleButton(CarpetRule<?> rule, String option, boolean brackets)
+    private static Text makeSetRuleButton(CarpetRule<?> rule, String option)
     {
         String style = RuleHelper.isInDefaultValue(rule) ? "g" : (option.equalsIgnoreCase(
                 RuleHelper.toRuleString(rule.defaultValue())) ? "e" : "y");
@@ -51,13 +52,13 @@ public class SearchCommand
             if (option.equalsIgnoreCase(RuleHelper.toRuleString(rule.defaultValue())))
                 style = style + "b";
         }
-        String component = style + (brackets ? " [" : " ") + option + (brackets ? "]" : "");
+        String component = style + " [" + option + "]";
         if (option.equalsIgnoreCase(RuleHelper.toRuleString(rule.value())))
             return Messenger.c(component);
 
         return Messenger.c(component, "^g " + tr(TranslationKeys.SWITCH_TO).formatted(
                         option + (option.equals(RuleHelper.toRuleString(rule.defaultValue())) ? " (default)" : "")),
-                "?/" + identifier + " " + rule.name() + " " + option);
+                "?/" + IDENTIFIER + " " + rule.name() + " " + option);
     }
 
     private static Text displayInteractiveSetting(CarpetRule<?> rule)
@@ -65,30 +66,42 @@ public class SearchCommand
         String displayName = RuleHelper.translatedName(rule);
         List<Object> args = new ArrayList<>();
         args.add("w - " + displayName + " ");
-        args.add("!/" + identifier + " " + rule.name());
+        args.add("!/" + IDENTIFIER + " " + rule.name());
         args.add("^y " + RuleHelper.translatedDescription(rule));
         for (String option : rule.suggestions()) {
-            args.add(makeSetRuleButton(rule, option, true));
+            args.add(makeSetRuleButton(rule, option));
             args.add("w  ");
         }
         if (!rule.suggestions().contains(RuleHelper.toRuleString(rule.value()))) {
-            args.add(makeSetRuleButton(rule, RuleHelper.toRuleString(rule.value()), true));
+            args.add(makeSetRuleButton(rule, RuleHelper.toRuleString(rule.value())));
             args.add("w  ");
         }
-        args.remove(args.size() - 1);
+        args.removeLast();
         return Messenger.c(args.toArray(new Object[0]));
     }
 
-    public static void executeCommand(ServerCommandSource source, String key, boolean enable, String category)
+    public static int executeCommand(CommandContext<ServerCommandSource> context) throws CommandSyntaxException
     {
+        if(context.getSource().getPlayer() == null){
+            context.getSource().sendFeedback(() -> Text.of("This command can only be used by players."), false);
+            return 0;
+        }
+
+        String key = StringArgumentType.getString( context, "key");
+        boolean enable = ROFCommandHelper.getArgumentOrDefault(context, "isNoDefaultValue", false,
+                BoolArgumentType::getBool);
+
+        String category = ROFCommandHelper.getArgumentOrDefault(context, "category", null,
+                StringArgumentType::getString);
+
+        ServerCommandSource source = context.getSource();
+
         SettingsManager manager = CarpetServer.settingsManager;
         Messenger.m(source, " ");
         Messenger.m(source, "wb 搜索结果为: ");
         int i = 0;
         for (var c : manager.getCarpetRules()) {
-            String allText = "";
-            allText += c.name();
-            allText += RuleHelper.translatedDescription(c);
+            String allText = c.name() + RuleHelper.translatedDescription(c);
             if (allText.toLowerCase().contains(key.toLowerCase()) && (category == null || c.categories()
                     .contains(category)) && (!enable || !RuleHelper.isInDefaultValue(c))) {
                 Messenger.m(source, displayInteractiveSetting(c));
@@ -96,47 +109,29 @@ public class SearchCommand
             }
         }
         Messenger.m(source, "wb 一共搜索到" + i + "条规则");
+        return 1;
     }
 
     public static void register(CommandDispatcher<ServerCommandSource> dispatcher)
     {
 
-        CommandNode<ServerCommandSource> root = dispatcher.getRoot();
-        CommandNode<ServerCommandSource> carpetNode = root.getChild("carpet");
 
-        LiteralArgumentBuilder<ServerCommandSource> mineCmd =
+        ROFCommandHelper<ServerCommandSource> helper = new ROFCommandHelper<>(dispatcher.getRoot().getChild(IDENTIFIER));
 
-                literal("search").requires(
-                                (source) -> carpet.utils.CommandHelper.canUseCommand(source, commandRulesSearcher))
-                        .then(argument("key", StringArgumentType.string()).executes((context ->
-                        {
-                            String key = StringArgumentType.getString(context, "key");
-                            executeCommand(context.getSource(), key, false, null);
-                            return 0;
-                        })).then(argument("isNoDefaultValue", BoolArgumentType.bool()).executes(context ->
-                                {
-                                    String key = StringArgumentType.getString(context, "key");
-                                    boolean brackets = BoolArgumentType.getBool(context, "isNoDefaultValue");
-                                    executeCommand(context.getSource(), key, brackets, null);
-                                    return 0;
-                                }
 
-                        ).then(argument("category", StringArgumentType.string()).suggests(
-                                new CategoriesSuggestionProvider()).executes(context ->
-                        {
-                            String key = StringArgumentType.getString(context, "key");
-                            boolean brackets = BoolArgumentType.getBool(context, "isNoDefaultValue");
-                            String category = StringArgumentType.getString(context, "category");
-                            executeCommand(context.getSource(), key, brackets, category);
-                            return 0;
-                        }))));
-        carpetNode.addChild(mineCmd.build());
+        helper.registerCommand("search{r} <key> [isNoDefaultValue] [category]{s}")
+                .rCarpet(()->commandRulesSearcher)
+                .arg(StringArgumentType.string())
+                .arg(BoolArgumentType.bool())
+                .arg( StringArgumentType.string())
+                .s(new CategoriesSuggestionProvider())
+                .command(SearchCommand::executeCommand);
     }
 
     public static class CategoriesSuggestionProvider implements SuggestionProvider<ServerCommandSource>
     {
         @Override
-        public CompletableFuture<Suggestions> getSuggestions(CommandContext<ServerCommandSource> context, SuggestionsBuilder builder) throws CommandSyntaxException
+        public CompletableFuture<Suggestions> getSuggestions(CommandContext<ServerCommandSource> context, SuggestionsBuilder builder)
         {
 
             for (String str : CarpetServer.settingsManager.getCategories()) {
